fix: make site not go out of view with scroll

--- a/src/screens/home/style.css
+++ b/src/screens/home/style.css
@@ -1,6 +1,6 @@
 .homepage-banner{
     background-image: url('../../lib/img/homepage_banner.jpeg');
-    width: 100vw;
+    /* width: 100vw; */
     height: 85vh;
     background-position: center center;
     background-repeat: no-repeat;
@@ -11,7 +11,7 @@
 .img-overlay{
     position: absolute;
     background: rgba(0, 0, 0, 0.5);
-    width: 100vw;
+    width: 100%;
     height: 85vh;
 }
 
